--- a/index.html
+++ b/index.html
@@ -1,53 +1,61 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>coursera assignment</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+
+	<title>Coursera Assignment</title>
+	<link rel="stylesheet" href="./css/bootstrap.min.css">
+	<link rel="stylesheet" href="./css/style.css">
+</head>
+
 <body>
 
-  <h1>Our Menu</h1>
-  	<div class="row">
+	<h1>Our Menu</h1>
+	<div class="row">
+		<div class="col col-lg-4 col-md-6 col-sm-12">
+			<div id="container">
+				<p id="p1">chicken</p>
+				<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
+			</div>
+		</div>
 
-  		<div class="col-lg-4 col-md-6" id="container">
-	  		<p id="p1">chicken</p>
-	  		<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
-  		</div>
+		<div class="col col-lg-4 col-md-6 col-sm-12">
+			<div id="container">
+				<p id="p2">beef</p>
+				<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
+			</div>
+		</div>
 
-		<div class="col-lg-4 col-md-6" id="container">
-	  		<p id="p2">beef</p>
-	  		<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
-	  	</div>  	
+		<div class="col col-lg-4 col-md-12">
+			<div id="container">
+				<p id="p3">sushi</p>
+				<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+					tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+					quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+					consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+					cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+					proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
+			</div>
+		</div>
 
-	  	<div class="col-lg-4 col-md-12" id="container">
-	  		<p id="p3">sushi</p>
-	  		<section>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	  		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	  		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-	  		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-	  		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-	  		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</section>
-	  	</div>  
+	</div>
 
-  	</div>
-
-  <script src="js/jquery-3.5.1.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/script.js"></script>
+	<script src="jquery-3.5.1.min.js"></script>
+	<script src="./js/bootstrap.min.js"></script>
+	<!-- <script src="./js/script.js"></script> -->
 </body>
+
 </html>
